--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+http://github.com/ortoloco/juntagrico.git
+git+http://github.com/juntagrico/juntagrico.git
 boto==2.48.0
 git+https://github.com/jschneier/django-storages.git#egg=django-storages
 gunicorn==19.7.1
