--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 git+http://github.com/juntagrico/juntagrico.git
 boto==2.48.0
-git+https://github.com/jschneier/django-storages.git#egg=django-storages
 gunicorn==19.7.1
 psycopg2>2.5.1
 dj-static==0.0.6
-dropbox
+dropbox==7.3.0
+django-storages==1.5.2
