--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
 juntagrico==1.2.2
-boto==2.48.0
-gunicorn==19.7.1
-psycopg2>2.5.1
-dj-static==0.0.6
-dropbox==9.0.0
-django-storages==1.7.1
+gunicorn==20.0.4
+psycopg2==2.8.4
